--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-
+    - name: Clean untracked files
+      run: git clean -xdf
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
